v0.6.0: evolution OOM fix, configurable parallelism, 1024x speed, imitation dual-board, per-technique live info
- Fix evolution OOM: bounded fixed thread pool (was unbounded virtual-thread-per-task);
  population up to 1000 no longer spawns 1000 concurrent sims. Episodes fan out as
  individual tasks so sims run simultaneously, capped by thread count.
- Options: Eval parallelism (Auto/all cores or pinned threads), Simulations per
  generation, Ghost lineage (generations). Wired into GeneticTrainer/CmaEsTrainer.
- CMA-ES now reports best/mean fitness; charts stream every generation regardless of
  display speed. Ghosts cull on a configurable lineage window.
- Speed up to 1024x with per-frame substep cap for responsiveness; remove post-game-over
  restart delay (agent restarts immediately).
- Radius-aware live drop clamp so fruit can't overlap the side wall; landscape board
  resized/repositioned to be fully visible and clear the RESTART button.
- Per-technique plain-English infocard explainers + live "what it's doing now" line
  (board caption portrait / panel stat landscape) incl. generative sampling detail.
- Imitation (BC/DAgger): you play on the LEFT, the cloned policy plays its own live
  game on the RIGHT, copying your style.

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>